--- a/src/app/component/advisors/advisors.component.css
+++ b/src/app/component/advisors/advisors.component.css
@@ -5,7 +5,7 @@
     width: 100%;
 }
 
-/* ul { 
+ul { 
     display: block;
     list-style-type: disc;
     margin-top: 1em;
@@ -13,7 +13,7 @@
     margin-left: 0;
     margin-right: 0;
     padding-left: 40px;
-  } */
+  }
   
 /* Customize the label (the checkbox) */
 .checkbox {
