--- a/src/app/component/advisors/advisors.component.html
+++ b/src/app/component/advisors/advisors.component.html
@@ -25,7 +25,9 @@
             <div class="card text-black bg-light mb-3" style="min-width: 90%;">
                     <div class="card-header"><h6>About Advisors</h6></div>
                     <div class="card-body">
-                      <p style="font-size: 14px;">Create an advisor here</p>
+                      <p style="font-size: 14px;">Create an advisor here
+                      <br>
+                      Due to limitations with the technical analysis API, only one asset can be queried, once per minute. We are sorry for the inconvenience.</p>
                       <!-- <button type="button" class="btn btn-sm" role="button" routerLink="/createadvisor">Create Advisor</button> -->
                       <button type="button" class="btn btn-dark" href="#" data-toggle="modal" data-target="#createAdvisor-modal">Create New</button>
                     </div>
